# RustPDF-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  SPEC.md  build.rs
assets/: desktop.css
phase/: README.md  d0-skeleton-render.md  d1-navigation-search.md  d2-editing.md  d3-forms-signatures.md  d4-desktop-polish.md  d5-package-ci.md
src/: main.rs  routes.rs
src/platform/: dialog.rs  menu.rs  mod.rs  render_protocol.rs
src/views/: editor.rs  mod.rs  welcome.rs
